<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RedBoy</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!-- 首页导航 -->
    <string name="tab_menu_home">主页</string>
    <string name="tab_menu_search">搜索</string>
    <string name="tab_menu_brand">品牌</string>
    <string name="tab_menu_shopping">购物车</string>
    <string name="tab_menu_more">更多</string>
    <string name="more">更多</string>
    <string name="account_center">账户中心</string>
    <string name="scan_record">浏览记录</string>
    <string name="helpe_center">帮助中心</string>
    <string name="feed_center">用户反馈</string>
    <string name="about_us">关于</string>
    <string name="mine_orders">我的订单(0)</string>
    <string name="address_manager">地址管理</string>
    <string name="gift_card">优惠券/礼品卡</string>
    <string name="faverite">收藏夹</string>
    <string name="account">帐号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="forgot_password">忘记密码?</string>

</resources>